--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
 
     <section id="miniprofile">
         <figure onclick="handleBrowseClick('input-image-hidden');">
-          <img src="img/BlankPFP.webp" alt="Profile Picture" class="ProfilePicture" id="output" width="500" height="500">
+          <img src="imgs/BlankPFP.webp" alt="Profile Picture" class="ProfilePicture" id="output" width="500" height="500">
           <figcaption>Calamitas</figcaption>
         </figure>
         <input style="display:none" type="file" accept="image/*" onchange="loadFile(event, 'output')" id="input-image-hidden">
         <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id dolore reprehenderit ipsum in nam officia deserunt alias, veniam saepe quas tenetur cumque ullam aperiam placeat possimus. Ratione fugiat est placeat.</p>
         
         <a href=""><section class="SocButton">
-          <img src="img/Insta.png" alt="instagram icon">
+          <img src="imgs/Insta.png" alt="instagram icon">
           <p>INSTAGRAM</p>
         </section></a>
         <br>
         <a href=""><section class="SocButton">
-          <img src="img/Linkedin.png" alt="Linkedin icon">
+          <img src="imgs/Linkedin.png" alt="Linkedin icon">
           <p>LINKEDIN</p>
         </section></a>
         <br>
         <a href=""><section class="SocButton">
-          <img src="img/Youtube.png" alt="youtube icon">
+          <img src="imgs/Youtube.png" alt="youtube icon">
           <p>YOUTUBE</p>
         </section></a>
         <br>
