--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="#" class="line">Faq</a></li>
             <li><a href="#" class="line">Explorar</a></li>
-            <li><a href="#" class="line">Fórum</a></li>
+            <li><a href="/index.html" class="line">Fórum</a></li>
           </ul>
         </nav>
       </div>
