--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                     <li><a href="#" >Faq</a></li>
                     <li><a href="#" >Explorar</a></li>
                     <li><a href="#" >Fórum</a></li>
-                    <li><a href="/Profile/profile.html" >Perfil</a></li>
+                    <li><a href="#" >Criar</a></li>
+                    <li><a href="/Profile/profile.html" >Login</a></li>
                 </ul>
             </nav>
             <img src="/imgs/icon-perfil.png" alt="" width="30px">
