--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <div class="logo">
                 <img src="/imgs/logo.png" alt="" width="60px" height="60px">
             </div>
+            <p class="LogoName">ARTSYPAGES</p>
             <nav>
                 <ul id="menuItems">
                     <li><a href="#" >Faq</a></li>
