--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="navbar">
             <div class="logo">
                 <img src="/imgs/logo.png" alt="" width="60px" height="60px">
+                <p class="LogoName">ARTSYPAGES</p>
             </div>
-            <p class="LogoName">ARTSYPAGES</p>
             <nav>
                 <ul id="menuItems">
                     <li><a href="#" >Faq</a></li>
@@ -74,7 +74,23 @@
         </div>
         
     </div>
-    
+    <!--
+
+        <div class="repositorios">
+            <div class="col-4">
+                <img src="/frieren.jpg" width="250px"></img>
+            </div>
+            <div class="col-4">
+                <img src="/frieren.jpg" width="250px"></img>
+            </div>
+            <div class="col-4">
+                <img src="/frieren.jpg" width="250px"></img>
+            </div>
+            <div class="col-4">
+                <img src="/frieren.jpg" width="250px"></img>
+            </div>
+        </div>
+    -->
 
     <script>
         var menuItems = document.getElementById("menuItems");
