--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
 
-    <div class="repositorios">
+    <!-- <div class="repositorios">
         <div class="col-4">
             <img src="/frieren.jpg" width="250px"></img>
         </div>
@@ -92,7 +92,7 @@
         <div class="col-4">
             <img src="/frieren.jpg" width="250px"></img>
         </div>
-    </div>
+    </div> -->
 
 
     <script>
