--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="//imgs/logo.png" alt="" width="60px" height="60px">
+                <img src="imgs/logo.png" alt="" width="60px" height="60px">
                 <p class="LogoName">ARTSYPAGES</p>
             </div>
             <nav>
@@ -25,12 +25,12 @@
                     <li><a href="/Profile/profile.html">Login</a></li>
                 </ul>
             </nav>
-            <img src="//imgs/icon-perfil.png" alt="" width="30px">
-            <img src="//imgs/menuHam.png" alt="" width="50px" class="menu-icon" onclick="menu()">
+            <img src="imgs/icon-perfil.png" alt="" width="30px">
+            <img src="imgs/menuHam.png" alt="" width="50px" class="menu-icon" onclick="menu()">
         </div>
         <div class="banner">
             <input type="file" id="inputImage" style="display:none;">
-            <img src="//imgs/Banner.png" alt="Imagem" id="imagem" style="cursor:pointer;">
+            <img src="imgs/Banner.png" alt="Imagem" id="imagem" style="cursor:pointer;">
         </div>
 
     </div>
