--- a/index.html
+++ b/index.html
@@ -32,23 +32,20 @@
             <input type="file" id="inputImage" style="display:none;">
             <img src="imgs/Banner.png" alt="Imagem" id="imagem" style="cursor:pointer;">
         </div>
-
     </div>
     <div class="perfil">
-        <div class="header-perfil" onclick="handleBrowseClick('input-image-hidden');">
-            <img src="imgs/BlankPFP.webp" alt="Profile Picture" class="ProfilePicture" id="output">
-            <h3>Legolas</h3>
-            <input style="display:none" type="file" accept="image/*" onchange="loadFile(event, 'output')"
-                id="input-image-hidden">
-
+        <div class="editavel">
+            <div class="header-perfil" onclick="handleBrowseClick('input-image-hidden');">
+                <img src="imgs/BlankPFP.webp" alt="Profile Picture" class="ProfilePicture" id="output">
+                <h3 id="profileName">Legolas</h3>
+                <input style="display:none" type="file" accept="image/*" id="input-image-hidden">
+            </div>
+            <div class="texto">
+                <h4 class="bio" id="profileBio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id dolore reprehenderit ipsum in nam officia deserunt alias, veniam saepe quas tenetur cumque ullam aperiam placeat possimus. Ratione fugiat est placeat.</h4>
+            </div>
+            <button id="saveChangesBtn" style="display:none;">Save Changes</button>
+            <div class="div-social">
         </div>
-        <div class="texto">
-            <h4 class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id dolore reprehenderit ipsum in
-                nam officia deserunt alias, veniam saepe quas tenetur cumque ullam aperiam placeat possimus. Ratione
-                fugiat est placeat.</h4>
-        </div>
-        <div class="div-social">
-
             <div class="linksSocial">
                 <a href="">
                     <div class="btnSocial">
@@ -74,57 +71,154 @@
                 </a>
             </div>
         </div>
-
     </div>
 
-
-
-    <!-- <div class="repositorios">
-        <div class="col-4">
-            <img src="/frieren.jpg" width="250px"></img>
-        </div>
-        <div class="col-4">
-            <img src="/frieren.jpg" width="250px"></img>
-        </div>
-        <div class="col-4">
-            <img src="/frieren.jpg" width="250px"></img>
-        </div>
-        <div class="col-4">
-            <img src="/frieren.jpg" width="250px"></img>
-        </div>
-    </div> -->
-
-
     <script>
-        var menuItems = document.getElementById("menuItems");
+       var menuItems = document.getElementById("menuItems");
+menuItems.style.maxHeight = "0px";
+function menu() {
+    if (menuItems.style.maxHeight == "0px") {
+        menuItems.style.maxHeight = "200px";
+    } else {
         menuItems.style.maxHeight = "0px";
-        function menu() {
-            if (menuItems.style.maxHeight == "0px") {
-                menuItems.style.maxHeight = "200px";
-            }
-            else {
-                menuItems.style.maxHeight = "0px";
-            }
-        }
-        // Função para abrir a janela de seleção de arquivo quando a imagem é clicada
-        document.getElementById('imagem').addEventListener('click', function () {
-            document.getElementById('inputImage').click();
-        });
+    }
+}
 
-        // Função para exibir a nova imagem selecionada
-        document.getElementById('inputImage').addEventListener('change', function () {
-            const file = this.files[0];
-            const reader = new FileReader();
+// Função para abrir a janela de seleção de arquivo quando a imagem do banner é clicada
+document.getElementById('imagem').addEventListener('click', function () {
+    document.getElementById('inputImage').click();
+});
 
-            reader.onload = function (e) {
-                document.getElementById('imagem').src = e.target.result;
-            }
+// Função para exibir a nova imagem selecionada do banner e salvá-la no localStorage
+document.getElementById('inputImage').addEventListener('change', function () {
+    const file = this.files[0];
+    const reader = new FileReader();
 
-            reader.readAsDataURL(file);
-        });
-        
+    reader.onload = function (e) {
+        const imgData = e.target.result;
+        document.getElementById('imagem').src = imgData;
+        localStorage.setItem('bannerImage', imgData); // Salva a imagem do banner no localStorage
+    }
 
+    reader.readAsDataURL(file);
+});
 
+// Função para abrir a janela de seleção de arquivo quando a imagem do perfil é clicada
+document.getElementById('output').addEventListener('click', function (event) {
+    document.getElementById('input-image-hidden').click();
+    event.stopPropagation();
+});
+
+// Função para exibir a nova imagem selecionada do perfil e salvá-la no localStorage
+document.getElementById('input-image-hidden').addEventListener('change', function () {
+    const file = this.files[0];
+    const reader = new FileReader();
+
+    reader.onload = function (e) {
+        const imgData = e.target.result;
+        document.getElementById('output').src = imgData;
+        localStorage.setItem('profileImage', imgData); // Salva a imagem do perfil no localStorage
+    }
+
+    reader.readAsDataURL(file);
+});
+
+// Função para carregar a imagem do banner e do perfil do localStorage ao carregar a página
+window.onload = function () {
+    const savedBannerImage = localStorage.getItem('bannerImage');
+    if (savedBannerImage) {
+        document.getElementById('imagem').src = savedBannerImage;
+    }
+
+    const savedProfileImage = localStorage.getItem('profileImage');
+    if (savedProfileImage) {
+        document.getElementById('output').src = savedProfileImage;
+    }
+
+    const savedProfileName = localStorage.getItem('profileName');
+    if (savedProfileName) {
+        document.getElementById('profileName').textContent = savedProfileName;
+    }
+
+    const savedProfileBio = localStorage.getItem('profileBio');
+    if (savedProfileBio) {
+        document.getElementById('profileBio').textContent = savedProfileBio;
+    }
+}
+
+// Função para permitir a edição do nome e da bio
+document.getElementById('profileName').addEventListener('click', function (event) {
+    const nameElement = document.getElementById('profileName');
+    const currentName = nameElement.textContent;
+    const nameInput = document.createElement('input');
+    nameInput.type = 'text';
+    nameInput.value = currentName;
+    nameInput.id = 'nameInput';
+    nameElement.replaceWith(nameInput);
+    document.getElementById('saveChangesBtn').style.display = 'block';
+    event.stopPropagation();
+});
+
+document.getElementById('profileBio').addEventListener('click', function (event) {
+    const bioElement = document.getElementById('profileBio');
+    const currentBio = bioElement.textContent;
+    const bioInput = document.createElement('textarea');
+    bioInput.value = currentBio;
+    bioInput.id = 'bioInput';
+    bioElement.replaceWith(bioInput);
+    document.getElementById('saveChangesBtn').style.display = 'block';
+    event.stopPropagation();
+});
+
+document.getElementById('saveChangesBtn').addEventListener('click', function () {
+    const nameInput = document.getElementById('nameInput');
+    const bioInput = document.getElementById('bioInput');
+
+    if (nameInput) {
+        const newName = nameInput.value;
+        const nameElement = document.createElement('h3');
+        nameElement.id = 'profileName';
+        nameElement.textContent = newName;
+        nameInput.replaceWith(nameElement);
+        localStorage.setItem('profileName', newName);
+    }
+
+    if (bioInput) {
+        const newBio = bioInput.value;
+        const bioElement = document.createElement('h4');
+        bioElement.className = 'bio';
+        bioElement.id = 'profileBio';
+        bioElement.textContent = newBio;
+        bioInput.replaceWith(bioElement);
+        localStorage.setItem('profileBio', newBio);
+    }
+
+    document.getElementById('saveChangesBtn').style.display = 'none';
+
+    // Re-attach the event listeners to the new elements
+    document.getElementById('profileName').addEventListener('click', function (event) {
+        const nameElement = document.getElementById('profileName');
+        const currentName = nameElement.textContent;
+        const nameInput = document.createElement('input');
+        nameInput.type = 'text';
+        nameInput.value = currentName;
+        nameInput.id = 'nameInput';
+        nameElement.replaceWith(nameInput);
+        document.getElementById('saveChangesBtn').style.display = 'block';
+        event.stopPropagation();
+    });
+
+    document.getElementById('profileBio').addEventListener('click', function (event) {
+        const bioElement = document.getElementById('profileBio');
+        const currentBio = bioElement.textContent;
+        const bioInput = document.createElement('textarea');
+        bioInput.value = currentBio;
+        bioInput.id = 'bioInput';
+        bioElement.replaceWith(bioInput);
+        document.getElementById('saveChangesBtn').style.display = 'block';
+        event.stopPropagation();
+    });
+});
     </script>
     <script src="profScript.js"></script>
 
